fixed overflowX

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,5 +1,5 @@
 * {
-  box-sizing: border-box;
+  // box-sizing: border-box;
   padding: 0;
   margin: 0;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
@@ -21,6 +21,7 @@
 body {
   padding: 0;
   margin: 0;
+  height: 100%;
   background-color: #0c221a;
 }
 
@@ -32,12 +33,9 @@ a {
 //------DISPLAY
 
 .main-container {
-  margin: 0;
-  padding: 0;
   background-color: #0c221a;
-  // border: double 2px blueviolet;
   height: 100vh;
-  width: 100vw;
+  width: 100%;
   //Layout
   display: grid;
   grid-template-areas:
@@ -48,29 +46,21 @@ a {
 
 .header {
   grid-area: "h";
-  width: 100%;
-  padding: 0;
-  margin: 0;
 }
 
-.main {
+main {
   grid-area: "m";
-  width: 100vw;
-  margin-top: 4rem;
-  padding: 0;
 }
 
 .deskPicContainer {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100%;
   margin-top: 4rem;
   margin-bottom: 4rem;
 }
 
 .work-room {
-  // border: 1px solid blue;
   display: flex;
   padding: 0;
   margin: 0;
@@ -79,6 +69,7 @@ a {
 
 .footer {
   grid-area: "f";
+  width: 100%;
 }
 
 // -----------CONTENT------
@@ -102,10 +93,6 @@ h1 {
   width: 100%;
   height: 6rem;
   transform: translateY(1px);
-  // margin-bottom: 10rem;
-  // padding-right: 2rem;
-  // top: 0;
-  // background-color: #0c221a;
   opacity: 1;
 }
 //TODO fix hamburger height on @media screen > 600px
